--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -1,89 +1,7 @@
-.mainvwrow {
-    flex: 1;
-    display: flex;
-}
-
-.indexdiv {
-    padding: 2% !important;
-    container-type: inline-size;
-    min-height: 600px;
-}
-
-.indexleftbutton {
-    height: min(30cqw,80cqh);
-    aspect-ratio: 1;
-    border-radius: 10%;
-    font-size: 6cqw;
-}
-
-.custom-nav {
-    --bs-navbar-bg: #ffefbf;
-    background-color: var(--bs-navbar-bg) !important;
-    --bs-navbar-color: rgb(80, 80, 80);
-    --bs-navbar-hover-color: #000000;
-}
-
-.navbar-toggler,
-.navbar-toggler:focus,
-.navbar-toggler:active {
-    outline: none !important;
-    box-shadow: none !important;
-    border: none !important;
-}
-
-.nav-link,
-.nav-link:hover,
-.nav-link:focus,
-.nav-link:active {
-    color: black;
-}
-
-.no-caret::after {
-    display: none !important;
-}
-
-.indexrightbutton {
-    border-radius: 10%;
-    margin: 10px;
-    font-size: 6cqw;
-    background-color: #ffee90;
-    border: 3px solid #aaaaaa;
-}
-
-.calendar {
-    font-size: 5cqw;
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(auto-fill, 30px);
-    overflow-y: auto;
-    gap: 1px;
-    background-color: #999999;
-    border: 1px solid #999999;
-}
-
-.calendarfield {
-    width: 100%;
-    height: 100%;
-    background-color: #eeeeee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.calendaritem {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .block {
-    border-radius: 10px;
-    border: 3px solid #aaaaaa;
-    background-color: #fff7e1;
+    border-radius: 4px;
+    border: 1px solid #aaa;
+    background-color: #f9f5bb;
     width: 100%;
     padding: 5px;
 }
@@ -105,81 +23,3 @@
     font-size: 24px;
 }
 
-.reportbtn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 80px;
-    width: 160px;
-    background-color: #00ba00;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.checkdialog {
-    top: 30vh;
-    width: 300px;
-    height: 150px;
-    background-color: #dfcc99;
-    border: 3px solid #555555;
-    border-radius: 4px;
-}
-
-.dialogtext {
-    height: 70px;
-    font-size: 20px;
-    display:flex;
-}
-
-.dialogbuttondiv {
-    display: flex;
-    width: 100%;
-    gap: 10px;
-}
-
-.dialogbutton {
-    height: 40px;
-    border-radius: 3px;
-    flex: 1;
-}
-
-.casedetailcontainer {
-    height: calc(100dvh - 56px - 3rem);
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
-
-.casedetailrow {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.casedetailrowblock {
-    height: 33%;
-    display: flex;
-    flex-direction: column;
-}
-
-/* 當螢幕寬度小於 768px 時觸發 */
-@media (max-width: 767px) {
-    .casedetailcontainer {
-        height: auto;
-    }
-
-    .casedetailrow {
-        height: auto;
-    }
-
-    .casedetailrowblock {
-        height: auto;
-    }
-
-    .invisible {
-        height: 10px;
-    }
-}
